# a2a_samples

./: README.md  main.py  pyproject.toml
client/: time_client.py
server/: tell_time_server.py
version_1_simple/: README.md
version_2_adk_agent/: README.md  pyproject.toml
version_2_adk_agent/agents/google_adk/: __main__.py  agent.py  task_manager.py
version_2_adk_agent/app/cmd/: cmd.py
version_2_adk_agent/server/: server.py
version_3_multi_agent/: README.md  pyproject.toml
version_3_multi_agent/agents/greeting_agent/: agent.py  task_manager.py
version_3_multi_agent/agents/host_agent/: agent_connect.py  entry.py  orchestrator.py
version_3_multi_agent/agents/tell_time_agent/: agent.py  task_manager.py
version_3_multi_agent/server/: server.py
version_4_multi_agent_mcp/: README.md  pyproject.toml
version_4_multi_agent_mcp/agents/greeting_agent/: agent.py
version_4_multi_agent_mcp/agents/host_agent/: entry.py  orchestrator.py
version_4_multi_agent_mcp/agents/tell_time_agent/: __main__.py
version_4_multi_agent_mcp/app/cmd/: cmd.py
version_4_multi_agent_mcp/client/: client.py
version_4_multi_agent_mcp/utilities/a2a/: agent_connect.py  agent_registry.json
version_4_multi_agent_mcp/utilities/mcp/: mcp_connect.py  mcp_discovery.py
version_4p01_with_vision_agent/: README.md  main.py  pyproject.toml
version_4p01_with_vision_agent/agents/greeting_agent/: __main__.py  agent.py  task_manager.py
version_4p01_with_vision_agent/agents/host_agent/: entry.py  orchestrator.py
version_4p01_with_vision_agent/agents/tell_time_agent/: agent.py  task_manager.py
version_4p01_with_vision_agent/agents/vision_agent/: __main__.py  agent.py  task_manager.py
version_4p01_with_vision_agent/app/cmd/: cmd.py
version_4p01_with_vision_agent/utilities/a2a/: agent_discovery.py  agent_registry.json
version_5_a2a_sdk/: .gitignore  README.md  main.py  pyproject.toml
version_5_a2a_sdk/agents/tell_time_agent/: __main__.py  agent.py  agent_executor.py
version_5_a2a_sdk/client/: client.py
version_6_docker_vision_agent/: Dockerfile  README.md  pyproject.toml
version_7_mcp_a2a_master/mcp_a2a_master/: README.md  main.py  pyproject.toml
version_7_mcp_a2a_master/mcp_a2a_master/agents/host_agent/: README.md  __main__.py  agent.py  agent_executor.py  description.txt  instructions.txt
version_7_mcp_a2a_master/mcp_a2a_master/agents/website_builder_simple/: README.md  __main__.py  agent.py  agent_executor.py  description.txt  instructions.txt
version_7_mcp_a2a_master/mcp_a2a_master/app/cmd/: README.md  cmd.py
(+9 files in other folders)
