[project]
name = "version-6-docker-vision-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.4",
    "click>=8.2.1",
    "google-adk>=1.1.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]
